2017-10-14  Bruno Haible  <bruno@clisp.org>

	Make genclisph code clearer.
	* genclisph.d (check_typecodes): Check test_f value not here...
	(main): ... but here.

2017-10-14  Bruno Haible  <bruno@clisp.org>

	Fix build failure with TYPECODES (regression from 2010-10-08).
	* genclisph.d (check_typecode_entry): Check array_simplep only for
	typecodes of array types.

2017-10-13  Bruno Haible  <bruno@clisp.org>

	Fix warning in clisp-test.c (regression from 2017-08-24).
	* genclisph.d (check_typecodes): Fix %-escape mistake.

2017-10-13  Bruno Haible  <bruno@clisp.org>

	Tweak mappable address range for Linux/x86_64.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_END): Shrink a bit.

2017-10-12  Bruno Haible  <bruno@clisp.org>

	Verified mappable address range for Solaris 11.
	* lispbibl.d: Add comments about Solaris 11.

2017-10-12  Bruno Haible  <bruno@clisp.org>

	Guarantee a page boundary between the growing and shrinking heap_limits
	in case of GENERATIONAL_GC && SPVW_MIXED_BLOCKS.
	* spvw_allocate.d (make_space_gc_true, make_space_gc_false): Round to
	physpagesize, not map_pagesize, if GENERATIONAL_GC is enabled.
	* spvw_fault.d (handle_fault): Drop the requirement that
	SIGSEGV_FAULT_ADDRESS_ALIGNMENT be 1.
	* lispbibl.d (GENERATIONAL_GC): Define without considering the value of
	SIGSEGV_FAULT_ADDRESS_ALIGNMENT.

2017-10-12  Bruno Haible  <bruno@clisp.org>

	Fix mistake in "highest bit number" test (regression from 2017-10-08).
	* m4/mmap.m4 (CL_MMAP): Update after value of cache variable changed.
	* aclocal.m4, src/configure: Regenerated.

2017-10-08  Bruno Haible  <bruno@clisp.org>

	Update to the newest gnulib.
	Ran "make -f Makefile.devel build-aux-update gnulib-imported \
	&& make -f Makefile.devel build-prerequisites".
	* gllib/*: Update from gnulib.

2017-10-08  Bruno Haible  <bruno@clisp.org>

	Define mappable address range for many platforms.
	* lispbibl.d (UNIX_GNU_FREEBSD, UNIX_IRIX): New macros.